button geupdate en onclick voor jeton werkt

--- a/PROGRAMEREN/voer/app/src/main/res/drawable/jeton_afbeelding.xml
+++ b/PROGRAMEREN/voer/app/src/main/res/drawable/jeton_afbeelding.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:shape="oval"
-    android:tint="@color/black">
+    android:color="@color/black"
+    android:shape="oval">
     <size
-        android:width="31dp"
-        android:height="31dp"/>
+        android:width="40dp"
+        android:height="40dp" />
 
 </shape>
