--- a/PROGRAMEREN/voer/app/src/main/res/drawable/black_cirkel.xml
+++ b/PROGRAMEREN/voer/app/src/main/res/drawable/black_cirkel.xml
@@ -1,10 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="50dp"
+    android:height="50dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+    android:tint="@color/black"
+    >
   <path
-      android:fillColor="@android:color/white"
+      android:fillColor="@android:color/black"
       android:pathData="M12,12m-10,0a10,10 0,1 1,20 0a10,10 0,1 1,-20 0"/>
 </vector>
