--- a/PROGRAMEREN/voer/app/src/main/res/layout/activity_main.xml
+++ b/PROGRAMEREN/voer/app/src/main/res/layout/activity_main.xml
@@ -22,12 +22,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/radioButton-geel"
+        android:id="@+id/radioButton_geel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginTop="8dp"
+        android:backgroundTint="@color/yellow"
         android:text="Ik speel met geel"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/button-computer-begint"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -39,6 +41,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="Ik speel met rood"
+        android:backgroundTint="@color/red"
         app:layout_constraintBottom_toTopOf="@+id/button-computer-begint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -52,7 +55,7 @@
         android:text="IK  BEGIN"
         app:layout_constraintBottom_toTopOf="@+id/herstart_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton-geel" />
+        app:layout_constraintTop_toBottomOf="@+id/radioButton_geel" />
 
     <Button
         android:id="@+id/button-computer-begint"
