--- a/PROGRAMEREN/voer/app/src/main/res/values/colors.xml
+++ b/PROGRAMEREN/voer/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="yellow">#FFFFEB33</color>
+    <color name="red">#E80E0E</color>
     <color name="blue">#3377FF</color>
 </resources>
