alle controles 4 en 3 in orde

--- a/PROGRAMEREN/voer/app/src/main/res/layout/activity_main.xml
+++ b/PROGRAMEREN/voer/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:gravity="center"
-        android:text="Welkom bij Vier op een rij ! \nKies je kleur  \nKies wie begint"
+        android:text="Welkom bij Vier op een rij !\nKies de kleur waarmee je wil spelen."
         app:layout_constraintBottom_toTopOf="@+id/button_ik-begin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,7 @@
         android:id="@+id/radioButton_geel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/yellow"
         android:text="Ik speel met geel"
