--- a/PROGRAMEREN/voer/app/src/main/res/layout/activity_main.xml
+++ b/PROGRAMEREN/voer/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="6dp"
+    android:layout_marginTop="10dp"
     tools:context=".MainActivity">
 
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginBottom="16dp"
         android:gravity="center"
         android:text="Welkom bij Vier op een rij !\nKies de kleur waarmee je wil spelen."
