--- a/WInkelLijst/app/src/main/res/layout/fragment_add.xml
+++ b/WInkelLijst/app/src/main/res/layout/fragment_add.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent"
     tools:context="fragments.AddFragment">
 
-    <TextView
-        android:id="@+id/tv_item"
+    <EditText
+        android:id="@+id/et_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:hint="TextView"
         app:layout_constraintBottom_toTopOf="@+id/btn_add_to_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.535"
