alles werkt maar zijn checks zijn nog niet perfect

--- a/WInkelLijst/app/src/main/res/navigation/my_nav.xml
+++ b/WInkelLijst/app/src/main/res/navigation/my_nav.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/listFragment"
         android:name="com.example.winkellijst.fragments.ListFragment"
-        android:label="fragment_list"
-        tools:layout="@layout/fragment_list" >
+        android:label="Boodschappen"
+        tools:layout="@layout/fragment_list">
         <action
             android:id="@+id/action_listFragment_to_addFragment"
             app:destination="@id/addFragment" />
@@ -17,8 +17,8 @@
     <fragment
         android:id="@+id/addFragment"
         android:name="com.example.winkellijst.fragments.AddFragment"
-        android:label="fragment_add"
-        tools:layout="@layout/fragment_add" >
+        android:label="nieuwe boodschap"
+        tools:layout="@layout/fragment_add">
         <action
             android:id="@+id/action_addFragment_to_listFragment"
             app:destination="@id/listFragment" />
