--- a/WInkelLijst/app/src/main/res/layout/custom_row.xml
+++ b/WInkelLijst/app/src/main/res/layout/custom_row.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/tv_id"
-        android:layout_width="wrap_content"
+        android:layout_width="20dp"
         android:layout_height="wrap_content"
         android:text="1"
         android:textSize="24dp"
@@ -20,7 +20,7 @@
         android:id="@+id/tv_itemName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="40dp"
 
         android:textSize="24dp"
         app:layout_constraintStart_toEndOf="@+id/tv_id"
