delete werkt, duvel nog niet

--- a/testpro/app/src/main/res/layout/custom_row.xml
+++ b/testpro/app/src/main/res/layout/custom_row.xml
@@ -39,7 +39,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_datum" />
 
     <TextView
-        android:id="@+id/tv__resultaat"
+        android:id="@+id/tv_resultaat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
