--- a/testpro/app/src/main/res/layout/custom_row.xml
+++ b/testpro/app/src/main/res/layout/custom_row.xml
@@ -36,7 +36,7 @@
         android:layout_marginTop="22dp"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/tv_datum"
-        app:layout_constraintTop_toBottomOf="@+id/tv_datum" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_pils" />
 
     <TextView
         android:id="@+id/tv_wijn"
