--- a/testpro/app/src/main/res/layout/fragment_ander.xml
+++ b/testpro/app/src/main/res/layout/fragment_ander.xml
@@ -21,7 +21,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
+        android:layout_marginStart="34dp"
         android:layout_marginTop="68dp"
         android:text="Naam drank : "
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +31,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
+        android:layout_marginStart="34dp"
         android:layout_marginTop="48dp"
         android:text="volume"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,21 +41,32 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
+        android:layout_marginStart="34dp"
         android:layout_marginTop="44dp"
         android:text="aantal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="44dp"
+        android:text="kcal per 100 ml"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
     <EditText
         android:id="@+id/et_naamAnder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="56dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Naam van de drank"
+        android:inputType="textPersonName"
+        android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/tv_titel" />
 
@@ -63,9 +74,9 @@
         android:id="@+id/radioGroup"
         android:layout_width="191dp"
         android:layout_height="46dp"
-        android:layout_marginStart="8dp"
-        android:orientation="horizontal"
+        android:layout_marginStart="38dp"
         android:layout_marginTop="28dp"
+        android:orientation="horizontal"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/et_naamAnder">
 
@@ -90,13 +101,38 @@
             android:onClick="onRadioButtonClicked"
             android:text="33cl" />
     </RadioGroup>
+
     <EditText
-        android:id="@+id/editTextNumber"
+        android:id="@+id/et_aantalAnder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="10dp"
         android:ems="10"
         android:inputType="number"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+
+    <EditText
+        android:id="@+id/et_calAnder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/et_aantalAnder" />
+
+    <Button
+        android:id="@+id/bt_return_to_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="terug naar vorig menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="64dp"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="474dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
