--- a/testpro/app/src/main/res/navigation/my_nav.xml
+++ b/testpro/app/src/main/res/navigation/my_nav.xml
@@ -51,6 +51,9 @@
         <action
             android:id="@+id/action_anderFragment_to_addFragment"
             app:destination="@+id/addFragment"/>
+        <action
+            android:id="@+id/action_anderFragment_to_listFragment"
+            app:destination="@id/listFragment" />
 
 
     </fragment>
