--- a/testpro/app/src/main/res/layout/fragment_add.xml
+++ b/testpro/app/src/main/res/layout/fragment_add.xml
@@ -121,41 +121,58 @@
         android:layout_marginTop="08dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:layout_marginLeft="64dp"
+        android:layout_marginStart="64dp"
         android:hint="naam drank"
-        android:textSize="16dp"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addKwak" />
 
     <Button
-        android:id="@+id/addAnder_glas"
+        android:id="@+id/addAnder_glas_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="glas"
+        android:background="@android:color/white"
+        android:textColor="@android:color/black"
         tools:layout_editor_absoluteX="168dp"
         tools:layout_editor_absoluteY="312dp"
         app:layout_constraintTop_toBottomOf="@+id/addKwak"
         app:layout_constraintStart_toEndOf="@id/addAnder_naam"/>
 
     <Button
-        android:id="@+id/addAnder_cl25"
-        android:layout_width="wrap_content"
+        android:id="@+id/addAnder_cl25_button"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:text="25cl"
-        app:layout_constraintTop_toBottomOf="@+id/addAnder_glas"
+        android:background="@android:color/white"
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@+id/addAnder_glas_button"
         app:layout_constraintStart_toEndOf="@id/addAnder_naam"
         tools:layout_editor_absoluteX="169dp"
         tools:layout_editor_absoluteY="360dp" />
+
+
+    <Button
+        android:id="@+id/addAnder_cl33_button"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:text="33cl"
+        android:background="@android:color/black"
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@+id/addAnder_cl25_button"
+        app:layout_constraintStart_toEndOf="@id/addAnder_naam"
+        tools:layout_editor_absoluteX="170dp"
+        tools:layout_editor_absoluteY="413dp" />
 
     <EditText
         android:id="@+id/addAnder_cal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Kcal/100ml"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/addKwak"
-        app:layout_constraintStart_toEndOf="@id/addAnder_glas"
+        app:layout_constraintStart_toEndOf="@id/addAnder_glas_button"
         tools:layout_editor_absoluteX="261dp"
         tools:layout_editor_absoluteY="326dp" />
 
@@ -164,22 +181,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="aantal"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:layout_marginTop="0dp"
         tools:layout_editor_absoluteX="323dp"
         tools:layout_editor_absoluteY="328dp"
         app:layout_constraintTop_toBottomOf="@+id/addKwak"
         app:layout_constraintStart_toEndOf="@id/addAnder_cal"/>
 
-    <Button
-        android:id="@+id/addAnder_cl33"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="33cl"
-        app:layout_constraintTop_toBottomOf="@+id/addAnder_cl25"
-        app:layout_constraintStart_toEndOf="@id/addAnder_naam"
-        tools:layout_editor_absoluteX="170dp"
-        tools:layout_editor_absoluteY="413dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
