--- a/testpro/app/src/main/res/layout/fragment_add.xml
+++ b/testpro/app/src/main/res/layout/fragment_add.xml
@@ -103,6 +103,86 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addKwak" />
 
+
+    <EditText
+        android:id="@+id/addAnder_naam"
+        android:layout_width="96dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="08dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:layout_marginStart="112dp"
+        android:hint="naam drank"
+        android:background= "#FFBB86FC"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addKwak" />
+
+    <TextView
+        android:id="@+id/addAnder_glas_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="35dp"
+        android:text="glas"
+        android:background= "#FFBB86FC"
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@+id/addAnder_naam"
+        app:layout_constraintStart_toEndOf="@id/addAnder_naam"/>
+
+    <TextView
+        android:id="@+id/addAnder_cl25_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="08dp"
+        android:layout_marginLeft="35dp"
+        android:text="25cl"
+        android:background= "#FFBB86FC"
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@+id/addAnder_glas_button"
+        app:layout_constraintStart_toEndOf="@id/addAnder_naam"
+        tools:layout_editor_absoluteX="169dp"
+        tools:layout_editor_absoluteY="360dp" />
+
+
+    <TextView
+        android:id="@+id/addAnder_cl33_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="08dp"
+        android:layout_marginLeft="35dp"
+        android:text="33cl"
+        android:background= "#FFBB86FC"
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@+id/addAnder_cl25_button"
+        app:layout_constraintStart_toEndOf="@id/addAnder_naam"
+   />
+
+    <EditText
+        android:id="@+id/addAnder_cal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="08dp"
+        android:layout_marginLeft="35dp"
+        android:hint="Kcal/100ml"
+        android:background= "#FFBB86FC"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@+id/addKwak"
+        app:layout_constraintStart_toEndOf="@id/addAnder_naam"
+         />
+
+    <EditText
+        android:id="@+id/addAnder_aantal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="39dp"
+        android:hint="aantal"
+        android:background= "#FFBB86FC"
+        android:textSize="16sp"
+        android:layout_marginStart="112dp"
+        app:layout_constraintTop_toBottomOf="@+id/addAnder_naam"
+        app:layout_constraintStart_toStartOf="parent"/>
+
     <Button
         android:id="@+id/add_button"
         android:layout_width="wrap_content"
@@ -113,80 +193,6 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addAnder" />
-
-    <EditText
-        android:id="@+id/addAnder_naam"
-        android:layout_width="96dp"
-        android:layout_height="34dp"
-        android:layout_marginTop="08dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:layout_marginStart="64dp"
-        android:hint="naam drank"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addKwak" />
-
-    <Button
-        android:id="@+id/addAnder_glas_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="glas"
-        android:background="@android:color/white"
-        android:textColor="@android:color/black"
-        tools:layout_editor_absoluteX="168dp"
-        tools:layout_editor_absoluteY="312dp"
-        app:layout_constraintTop_toBottomOf="@+id/addKwak"
-        app:layout_constraintStart_toEndOf="@id/addAnder_naam"/>
-
-    <Button
-        android:id="@+id/addAnder_cl25_button"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:text="25cl"
-        android:background="@android:color/white"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@+id/addAnder_glas_button"
-        app:layout_constraintStart_toEndOf="@id/addAnder_naam"
-        tools:layout_editor_absoluteX="169dp"
-        tools:layout_editor_absoluteY="360dp" />
-
-
-    <Button
-        android:id="@+id/addAnder_cl33_button"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:text="33cl"
-        android:background="@android:color/black"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@+id/addAnder_cl25_button"
-        app:layout_constraintStart_toEndOf="@id/addAnder_naam"
-        tools:layout_editor_absoluteX="170dp"
-        tools:layout_editor_absoluteY="413dp" />
-
-    <EditText
-        android:id="@+id/addAnder_cal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Kcal/100ml"
-        android:textSize="16sp"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/addKwak"
-        app:layout_constraintStart_toEndOf="@id/addAnder_glas_button"
-        tools:layout_editor_absoluteX="261dp"
-        tools:layout_editor_absoluteY="326dp" />
-
-    <EditText
-        android:id="@+id/addAnder_aantal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="aantal"
-        android:textSize="16sp"
-        android:layout_marginTop="0dp"
-        tools:layout_editor_absoluteX="323dp"
-        tools:layout_editor_absoluteY="328dp"
-        app:layout_constraintTop_toBottomOf="@+id/addKwak"
-        app:layout_constraintStart_toEndOf="@id/addAnder_cal"/>
 
 
 
